# EvidenceWeaver

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codex_work  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: benchmark-proposal.yml  config.yml  docs-and-infra.yml  eval-gap.yml  failure-case.yml  reward-idea.yml
.github/workflows/: ci.yml  pages.yml
benchmarks/real_cases_v1/: README.md
benchmarks/real_cases_v1/results/: baseline_sweep.json
benchmarks/real_cases_v1/tasks/: agent_diagnostics_reliability_task.json  agent_training_stack_task.json  agentic_rl_stability_task.json  benchmark_reproducibility_task.json  browser_agent_environment_task.json  computer_use_rl_task.json  deep_search_reward_task.json  swe_agent_posttraining_task.json  terminal_agent_rl_task.json  tool_user_interaction_task.json  trajectory_credit_assignment_task.json  verifiable_environment_feedback_task.json
benchmarks/snapshot_v0/: README.md
docs/: benchmark-slice.md  index.html  interfaces.md  progress-and-roadmap.md  related-work.md  research-agenda.md  reward-design.md
docs/assets/: site.css  site.js
examples/runs/: synthetic_delay_good_run.json  synthetic_delay_weak_run.json
examples/tasks/: synthetic_delay_task.json
paper/: draft.md  outline.md
schemas/: run-artifact.v0.json  task-bundle.v0.json
src/evidenceweaver/: __init__.py  models.py
tests/: test_baseline_agent.py  test_evaluator.py  test_optimizer.py  test_repository_surface.py  test_reward_graph.py
(+60 files in other folders)
