[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evidenceweaver"
version = "0.1.0"
description = "Minimal research scaffold for citation-grounded RL in deep research agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "EvidenceWeaver contributors" }
]
license = "MIT"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
